# NGArgParser

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
misc/: AACounterArgumentParser.py  ChildArgumentParser.py  README  example.json  example.tsv  postprocess.py  preprocess-example.py
ngargparser/: NGArgumentParser.py  NGChildArgumentParser.py  cli.py  core_validators.py  license-LJI.txt  validators.py
ngargparser/misc/: README  preprocess-example.py  preprocess.py  run_aa_counter.py  run_aacounter.py  run_app.py
ngargparser/misc/example-app/: example.json  example_job_descriptions.json
ngargparser/templates/: ChildArgumentParser.py  Makefile  README  README.md  build.conf  build.sh  configure.py  dependencies.sh  do-not-distribute.txt  hooks.sh  postprocess.py  preprocess.py  pyproject.toml.tmpl  run_app.py  set_pythonpath.py
ngargparser/templates/deploy/: install.sh
ngargparser/templates/example-app/: AACounterArgumentParser.py  NGArgumentParser.py  README  example_job_descriptions.json  postprocess.py  preprocess.py  run_aa_counter.py
